Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignIntObjIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(Integer var)
        if var:GetValue() = 5
            output "passed"
        end
    end
end
