Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjIntObjWrapped.quorum
class main
    action Main
        Integer i
        i:setValue(5)
        Boolean b = i
    end
end